# oopsla-2025-artifact-overloading

./: .gitignore  ARCHITECTURE.md  CITATION.cff  Cargo.toml  README.md  SYNTAX_CHEATSHEET.md  bench-scale-plot.py  bench-scale.py  bench.py  examples.json  flake.nix  index.html  make_examples.py
.github/workflows/: nix.yml
benchmarks/: 3sat-hard.over  3sat-hard.swift  3sat-orig.over  3sat-orig.swift  addneg-big.over  addneg-big.swift  addneg-orig.over  addneg-orig.swift  cps-10.over  cps-10.swift  cps-100.over  cps-100.swift  cps-20.over  cps-20.swift  dist.over  dist.swift  recur.over  recur.swift  uri-big.over  uri-big.swift  uri-orig.over  uri-orig.swift
data/: benchmark_comparison_default.md  results_perf_default.md  results_scale_default.csv
examples/: app-reverse-app.over  apply-add-one-lambda.over  apply-add-one.over  apply-no-overload.over  arity.over  beginners.over  combine.over  nested-badly.over  rebuttal-mini.over  recursion.over  same-dimension-twice.over  sanity-id.over  sec-1-1-1.over  sec-2-1.over  sec-2-2.over  sec-2-3.over  sec-2-4-1-A.over  sec-2-4-1-B.over  sec-2-4-2.over  sec-4-3-1.over  sec-5-2.over  small.over  super-higher-order.over  swift-big.over  swift-online.over  x-add-x-many.over  x-add-x.over
examples/snapshots/: overloading__compiler_examples@42.snap  overloading__compiler_examples@app-reverse-app.snap  overloading__compiler_examples@apply-add-one-lambda.snap  overloading__compiler_examples@apply-add-one.snap  overloading__compiler_examples@apply-no-overload.snap  (+24 more)
src/: bdd.rs  infer.rs  lib.rs  main.rs  rename.rs  syntax.rs
