[package]
name = "overloading"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/se-tuebingen/oopsla-2025-artifact-overloading"
categories = ["compilers"]

[profile.release]
lto = "fat"
codegen-units = 1

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
biodivine-lib-bdd = "0.5.23"
nom = "7.1"
nom_locate = "4.2"
pretty = "0.12"
console_error_panic_hook = "0.1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustc-hash = "2.1"

# WebAssembly-specific dependencies
[dependencies.wasm-bindgen]
version = "0.2"
optional = true

[dependencies.web-sys]
version = "0.3"
optional = true
features = ["console"]

[dependencies.js-sys]
version = "0.3"
optional = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
insta = { version = "1.40", features = ["glob", "json", "redactions"] }
clap = { version = "4.4", features = ["derive"] }

[features]
default = []
wasm = ["wasm-bindgen", "web-sys", "js-sys"]
